--- a/Sunduk.PWA/Pages/NC.razor
+++ b/Sunduk.PWA/Pages/NC.razor
@@ -23,7 +23,7 @@
             </MudSelect>
         </MudItem>
         <MudItem xs="3">
-            <MudButton Size="Size.Large" Variant="Variant.Outlined" Color="Color.Primary" OnClick="OpenToolDialog">Инструмент</MudButton>
+            <MudButton Size="Size.Large" Variant="Variant.Outlined" Color="Color.Primary" OnClick="OpenSequencelDialog" Disabled="@(!ValidWorkpiece)">Создать переход</MudButton>
         </MudItem>
         <MudItem xs="6">
             <MudTextField @bind-Value="_WorkpieceExternalDiameter" Label="Наружный диаметр" Adornment="Adornment.End" AdornmentText="мм" Variant="Variant.Text" Immediate="true"></MudTextField>
@@ -50,18 +50,21 @@
 {
     public NC()
     {
-        Tools.Add(new TurningTool(0101, "PROHOD", 80, 0.8));
-        Tools.Add(new TurningTool(0101, "PROHOD", 80, 0.4));
-        Tools.Add(new TurningTool(0101, "PROHOD", 80, 0.2));
-        Tools.Add(new TurningTool(0101, "PROHOD", 55, 0.8));
-        Tools.Add(new TurningTool(0101, "PROHOD", 55, 0.4));
-        Tools.Add(new TurningTool(0101, "PROHOD", 55, 0.2));
-        Tools.Add(new TurningTool(0101, "PROHOD", 35, 0.8));
-        Tools.Add(new TurningTool(0101, "PROHOD", 35, 0.4));
-        Tools.Add(new TurningTool(0101, "PROHOD", 35, 0.2));
+        Tools.Add(new SpecialTool(0000, "UPOR"));
+        Tools.Add(new TurningExternalTool(0101, "PROHOD", 80, 0.8));
+        Tools.Add(new TurningExternalTool(0101, "PROHOD", 80, 0.4));
+        Tools.Add(new TurningExternalTool(0101, "PROHOD", 80, 0.2));
+        Tools.Add(new TurningExternalTool(0101, "PROHOD", 55, 0.8));
+        Tools.Add(new TurningExternalTool(0101, "PROHOD", 55, 0.4));
+        Tools.Add(new TurningExternalTool(0101, "PROHOD", 55, 0.2));
+        Tools.Add(new TurningExternalTool(0101, "PROHOD", 35, 0.8));
+        Tools.Add(new TurningExternalTool(0101, "PROHOD", 35, 0.4));
+        Tools.Add(new TurningExternalTool(0101, "PROHOD", 35, 0.2));
         Tools.Add(new DrillingTool(1212, "SV TV", 10, 140));
-        Tools.Add(new GroovingTool(1010, "KANAVA", 3, GroovingTool.Point.Left));
-        Tools.Add(new ThreadingTool(0313, "REZBA", 1.5, 1));
+        Tools.Add(new GroovingExternalTool(1010, "KANAVA", 3, GroovingExternalTool.Point.Left));
+        Tools.Add(new ThreadingExternalTool(0303, "REZBA", 1.5, 1));
+        Tools.Add(new TappingTool(0202, "METCHIK", 12, 1.75));
+        Tools.Add(new TappingTool(0404, "RASKATNIK", 10, 1.5));
 
         Operations.Add(Operation.Header(Machine));
         Operations.Add(Operation.SafetyString(Machine, 2500));
@@ -78,6 +81,12 @@
     private void OpenSequencelDialog()
     {
         var parameters = new DialogParameters();
+        parameters.Add(nameof(Machine), Machine);
+        parameters.Add(nameof(Tools), Tools);
+        parameters.Add(nameof(WorkpieceExternalDiameter), WorkpieceExternalDiameter);
+        parameters.Add(nameof(WorkpieceInternalDiameter), WorkpieceInternalDiameter);
+        parameters.Add(nameof(WorkpieceLength), WorkpieceLength);
+        parameters.Add(nameof(WorkpieceMaterial), WorkpieceMaterial);
         var options = new DialogOptions() { FullScreen = true, CloseButton = true };
         DialogService.Show<SequenceDialog>("Переходы", parameters, options);
     }
