--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -11,6 +11,9 @@
 @using Sunduk.PWA.Shared
 @using Sunduk.PWA.Components
 @using Sunduk.PWA.Util
-@using Sunduk.PWA.NC
 @using Sunduk.PWA.Dialogs
+@using Sunduk.PWA.Infrastructure
+@using Sunduk.PWA.Infrastructure.Templates
+@using Sunduk.PWA.Infrastructure.Sequences
+@using Sunduk.PWA.Infrastructure.Tools
 @using MudBlazor
